--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.7.2",
+    "react-toastify": "^9.1.2",
     "react-virtualized-auto-sizer": "^1.0.12",
     "react-window": "^1.8.8"
   }
