--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "webpack --mode development",
     "dist": "webpack --mode production",
     "test:unit": "jest unit.test",
-    "test:integration": "jest integration.test"
+    "test:integration": "jest integration.test",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "keywords": [],
   "devDependencies": {
@@ -24,6 +26,7 @@
     "babel-jest": "^29.5.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "cypress": "^12.9.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
