--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
     "allowJs": true,
     "moduleResolution": "node",
     "jsx": "react-jsx"
-  }
+  },
+  "exclude": [
+    "./cypress.config.ts"
+  ]
 }
