--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,15 @@ orbs:
   # Orbs reduce the amount of configuration required for common tasks.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   node: circleci/node@5.0.1
+  # "cypress-io/cypress@3" installs the latest published
+  # version "s.x.y" of the orb. We recommend you then use
+  # the strict explicit version "cypress-io/cypress@3.x.y"
+  # to lock the version and prevent unexpected CI changes
+  cypress: cypress-io/cypress@3
 
 jobs:
   build:
+    executor: node/default
     docker:
       - image: cimg/node:16.14.0
     steps:
@@ -21,6 +27,7 @@ jobs:
           command: npm run build
   # Below is the definition of your job to test your Node app. You can rename and customize it as you want.
   unit_test:
+    executor: node/default
     # These next lines define a docker executor: https://circleci.com/docs/2.0/executor-types/
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # A list of available CircleCI docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
@@ -39,6 +46,7 @@ jobs:
           name: Run unit tests
           command: npm run test:unit
   integration_test:
+    executor: node/default
     docker:
       - image: cimg/node:16.14.0
     steps:
@@ -59,5 +67,7 @@ workflows:
       - build
       - unit_test
       - integration_test
+      - cypress/run # "run" job comes from "cypress" orb
+          start-command: 'npm run start'
       # For running simple node tests, you could optionally instead use the node/test job from the orb to replicate and replace the manually defined "test" job above in fewer lines.
       # - node/test
