--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-  "name": "webui",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "build": "webpack --mode development",
-    "dist": "webpack --mode production",
-    "test:unit": "jest unit.test",
-    "test:integration": "jest integration.test",
-    "test:e2e": "cypress open"
-  },
-  "keywords": [],
-  "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react-window": "^1.8.5",
-    "babel-jest": "^29.5.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.3",
-    "cypress": "^12.9.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-transform-stub": "^2.0.0",
-    "style-loader": "^3.3.2",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "dependencies": {
-    "@types/react-dom": "^18.0.11",
-    "memoize-one": "^6.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-select": "^5.7.2",
-    "react-toastify": "^9.1.2",
-    "react-virtualized-auto-sizer": "^1.0.12",
-    "react-window": "^1.8.8"
-  }
+    "name": "webui",
+    "version": "1.0.0",
+    "description": "",
+    "main": "main.js",
+    "scripts": {
+        "watch": "webpack --watch",
+        "start": "webpack serve --open",
+        "build": "webpack --mode development",
+        "dist": "webpack --mode production",
+        "test:unit": "jest unit.test",
+        "test:integration": "jest integration.test",
+        "test:e2e": "cypress run",
+        "cypress:open": "cypress open"
+    },
+    "keywords": [],
+    "devDependencies": {
+        "@babel/core": "^7.21.4",
+        "@babel/preset-env": "^7.21.4",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.21.4",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/react-window": "^1.8.5",
+        "babel-jest": "^29.5.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.3",
+        "cypress": "^12.9.0",
+        "html-webpack-plugin": "^5.5.0",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
+        "jest-transform-stub": "^2.0.0",
+        "style-loader": "^3.3.2",
+        "ts-loader": "^9.4.2",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1"
+    },
+    "dependencies": {
+        "@types/react-dom": "^18.0.11",
+        "memoize-one": "^6.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-select": "^5.7.2",
+        "react-toastify": "^9.1.2",
+        "react-virtualized-auto-sizer": "^1.0.12",
+        "react-window": "^1.8.8"
+    }
 }
